:remove jlink, add native image build, optimize file server start