@@ -4,97 +4,125 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.hibegin</groupId>
-    <artifactId>simplewebserver-cli-parent</artifactId>
-    <version>0.0.6-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <url>http://github.com/hibegin/simplewebserver-cli</url>
+    <artifactId>simplewebserver-cli</artifactId>
+    <version>0.1.3</version>
+    <url>https://github.com/94fzb/simplewebserver-cli</url>
 
     <properties>
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
         <java.version>11</java.version>
+        <native.maven.plugin.version>0.10.2</native.maven.plugin.version>
+        <junit.jupiter.version>5.8.1</junit.jupiter.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <imageName>simplewebserver-cli</imageName>
+        <mainClass>com.hibegin.http.file.server.FileHttpServerApplication</mainClass>
     </properties>
-    <developers>
-        <developer>
-            <email>xchun90@163.com</email>
-            <url>https://xiaochun.zrlog.com</url>
-        </developer>
-    </developers>
-    <scm>
-        <connection>scm:git:git@github.com:hibegin/simplewebserver-cli.git</connection>
-        <developerConnection>scm:git:git@github.com:hibegin/simplewebserver-cli.git</developerConnection>
-        <url>git@github.com:hibegin/simplewebserver-cli.git</url>
-        <tag>HEAD</tag>
-    </scm>
-    <issueManagement>
-        <system>Github Issue</system>
-        <url>http://github.com/hibegin/simplewebserver-cli</url>
-    </issueManagement>
-    <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://apache.org/licenses/LICENSE-2.0.txt</url>
-        </license>
-    </licenses>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.hibegin</groupId>
+            <artifactId>simplewebserver</artifactId>
+            <version>0.3.140</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.9.0</version>
+        </dependency>
+    </dependencies>
+
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.0.2</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>java-agent</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>java</executable>
+                            <workingDirectory>${project.build.directory}</workingDirectory>
+                            <arguments>
+                                <argument>--enable-preview</argument>
+                                <argument>-classpath</argument>
+                                <classpath/>
+                                <argument>com.hibegin.http.file.server.FileHttpServerNativeImageAgent</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>native</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>${project.build.directory}/${imageName}</executable>
+                            <workingDirectory>${project.build.directory}</workingDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
-            <id>ngnx</id>
-            <url>https://oss.sonatype.org/content/groups/public</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
+    <profiles>
+        <profile>
+            <id>native</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>${native.maven.plugin.version}</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>compile-no-fork</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                            <execution>
+                                <id>test-native</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <phase>test</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <fallback>false</fallback>
+                            <buildArgs>
+                                <arg>
+                                    -Ob
+                                    -H:+UnlockExperimentalVMOptions
+                                    -march=compatibility --enable-preview -H:DashboardDump=${imageName}
+                                    -H:+DashboardAll -H:IncludeResources= --enable-url-protocols=http --enable-url-protocols=https --enable-monitoring=heapdump
+                                </arg>
+                            </buildArgs>
+                            <agent>
+                                <enabled>true</enabled>
+                            </agent>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
-    <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
-
-    <modules>
-        <module>simplewebserver.cli</module>
-        <module>jlink</module>
-    </modules>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>com.hibegin</groupId>
-                <artifactId>simplewebserver.cli</artifactId>
-                <version>0.0.6-SNAPSHOT</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 </project>
